--- a/card_list.html
+++ b/card_list.html
@@ -368,17 +368,15 @@
     <div class="container-top">
       <h2>ホロライブカード一覧</h2>
       
-      <div class="top-nav">
-        <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
-        <button onclick="location.href='deck_builder.html'">🧠 デッキ作成</button>
-      </div>
-
-      <div class="top-controls">
+        <div class="top-nav">
+          <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
+          <button onclick="location.href='deck_builder.html'">⚔️ デッキ作成</button>
+        </div>      <div class="top-controls">
         <!-- その他のコントロール -->
         <div class="top-controls-row">
           <button onclick="setViewMode('table')">🧾 表モード</button>
           <button onclick="setViewMode('compact')">🖼️ 簡易表示</button>
-          <button onclick="toggleDarkMode()">🌗 モード切替</button>
+          <button onclick="toggleDarkMode()">🌗</button>
         </div>
         
         <div class="top-controls-row">
