--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       </a>
 
       <a href="deck_builder.html" class="menu-card">
-        <span class="menu-icon">🧠</span>
+        <span class="menu-icon">⚔️</span>
         <div class="menu-title">デッキ作成</div>
         <div class="menu-description">
           戦略的なデッキを構築。カードの組み合わせを考えながら最適なデッキを作成できます。
