--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -322,12 +322,12 @@
       }
 
       .top-bar .nav-row:nth-child(2) {
-        justify-content: center; /* 検索・ソート行は中央揃え */
+        justify-content: flex-start; /* 検索・ソート行は左寄せ */
       }
 
       .top-bar .nav-row > div {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         flex-wrap: wrap;
         gap: 3px;
       }
@@ -353,7 +353,7 @@
         flex-direction: row;
         gap: 5px;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         flex-wrap: wrap;
       }
 
