--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -955,5 +955,15 @@
       }
     });
     </script>
+
+<div style="margin-top: 20px; padding: 20px; background: rgba(0,0,0,0.05); border-top: 1px solid rgba(0,0,0,0.1); text-align: center; font-size: 0.85em; color: #666;">
+  <p><strong>権利表記・免責事項</strong></p>
+  <p>「ホロライブ」「hololive」は株式会社カバーの商標です。</p>
+  <p>このツールは株式会社カバーとは無関係の非公式ファンメイドツールです。</p>
+  <p>カードデータの著作権は各権利者に帰属します。</p>
+  <p>このツールの使用により生じた損害について、作成者は一切の責任を負いません。</p>
+  <p style="margin-top: 10px;">© 2025 Hololive Card Game Management Tool (非公式)</p>
+</div>
+
   </body>
 </html>
