--- a/index.html
+++ b/index.html
@@ -252,7 +252,11 @@
   <div class="container">
     <div class="logo-container">
       <div class="logo-glow"></div>
-      <img src="images/Logo_-_Hololive_Official_Card_Game.png" alt="ホロライブオフィシャルカードゲーム" class="logo">
+      <!-- ロゴは権利関係により一時的に非表示 -->
+      <!-- <img src="images/Logo_-_Hololive_Official_Card_Game.png" alt="ホロライブオフィシャルカードゲーム" class="logo"> -->
+      <div class="logo-placeholder" style="width: 300px; height: 80px; background: #f0f0f0; border: 2px dashed #ccc; display: flex; align-items: center; justify-content: center; border-radius: 8px; margin: 20px auto; color: #666; font-size: 14px;">
+        カードゲーム管理ツール
+      </div>
     </div>
     
     <h1>ホロライブカードゲーム<br>管理ツール</h1>
@@ -291,6 +295,13 @@
     <div class="footer">
       <p>© 2025 Hololive Card Game Management Tool</p>
       <p>このツールは非公式のファンメイドツールです</p>
+      <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(0,0,0,0.1); font-size: 0.85em; color: #888; line-height: 1.4;">
+        <p><strong>権利表記・免責事項</strong></p>
+        <p>「ホロライブ」「hololive」は株式会社カバーの商標です。</p>
+        <p>このツールは株式会社カバーとは無関係の非公式ファンメイドツールです。</p>
+        <p>カードデータの著作権は各権利者に帰属します。</p>
+        <p>このツールの使用により生じた損害について、作成者は一切の責任を負いません。</p>
+      </div>
       <p id="offline-status" style="font-size: 0.8em; margin-top: 10px;"></p>
     </div>
   </div>
