--- a/card_list.html
+++ b/card_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 2.4 - Enhanced mobile sticky controls background fix -->
+<!-- Version: 3.0 - Added copyright notice and legal disclaimers -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -582,7 +582,7 @@
   <div class="container">
     <div class="container-top">
       <h2>ホロライブカード一覧 
-        <span style="font-size: 12px; color: #999; font-weight: normal;">[v2.4-BG-FIX]</span>
+        <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.0-COPYRIGHT]</span>
       </h2>
       
         <div class="top-nav">
