--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 2.8-MOBILE-UPDATE-FIX - Fixed mobile update issues -->
+<!-- Version: 3.0-COPYRIGHT - Added copyright notice and legal disclaimers -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <meta name="cache-bust" content="v2.8-force-20250122-2">
+  <meta name="cache-bust" content="v3.0-copyright-20250122">
   <meta name="last-modified" content="Wed, 22 Jul 2025 13:00:00 GMT">
   <title>カード詳細検索ページ</title>
   <style>
@@ -401,7 +401,7 @@
           <button onclick="location.href='deck_builder.html'">⚔️ デッキ作成</button>
         </div>
         <h2 style="margin: 0;">カード詳細検索 
-          <span style="font-size: 12px; color: #999; font-weight: normal;">[v2.8-MOBILE-FIX]</span>
+          <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.0-COPYRIGHT]</span>
         </h2>
         <button onclick="toggleDarkMode()" style="padding: 2px 6px; font-size: 14px; min-width: auto; width: 28px; height: 28px;">🌗</button>
       </div>
