update: 	v3.3-logo-removal-clean

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.0-COPYRIGHT - Added comprehensive copyright notice and legal disclaimers -->
+<!-- Version: 3.3-LOGO-REMOVAL - Removed logo container and cleaned up design -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -211,7 +211,7 @@
 <body>
   <div class="container">
     <h1>ホロライブカードゲーム<br>管理ツール
-      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;">[v3.1-COPYRIGHT-MOBILE]</span>
+      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;">[v3.3-LOGO-REMOVAL]</span>
     </h1>
 
     <div class="menu-grid">
